...
        <View
          style={{ width: hideBack ? '100%' : '49%', alignItems: 'center' }}>
          <ActivityIndicator color={color.main} />
        </View>
      ) : (
        <RatsButton
          testID="setup-buttons-next"
          title={nextLabel}
          containerStyle={{ width: hideBack ? '100%' : '49%' }}
          onPress={onNextPress}
          disabled={nextDisabled}
        />
      )}
...
