...
        })}
      </View>
    );
  };

  return (
    <View style={styles.container} testID="oxford-dashboard-content">
      <ScreenHeader
        header="Oxford House"
        renderBackButton
        container={{ marginBottom: 2 }}
      />
      <ScrollView
...
