...
    }
  };

  return (
    <RatsScrollView
      contentContainerStyle={styles.container}
      testID="guest-overview-screen"
    >
      {/******************************* HEADER *******************************/}
      <ScreenHeader
        header={firstName + (lastName ? " " + lastName[0] + "." : "")}
        icon={
          <ClickableIcon
...
            isAdmin={isAdmin(token, house.id)}
          />
        )}
      </AuthConsumer>

      {/******************************* HEALTH SCORE ********************************/}
      <View testID="week-summary-card">
        <WeekStatSummary
          percentage={overallPercentage}
          header="HEALTH SCORE"
          rightSideContainer={{
            justifyContent: "flex-start",
            alignItems: "center",
...
            </View>
          }
        />
      </View>

      {/******************************* STAT SECTIONS *********************************/}
      {renderStatSection("meeting", "attended", undefined, "meetings-card")}
      {renderStatSection(
        "hoursWorked",
        "hours worked",
        undefined,
        "job-status-card"
      )}
      {renderStatSection(
        "choreCompleted",
        "completed",
        undefined,
        "chores-card"
      )}
      {renderStatSection(
        "metPrimarySupporter",
        "",
        `Step ${currentGuest!.step || 1}. ${
          getStatValue("metPrimarySupporter")
...
            iconBackgroundColor={color.main}
            onPress={
              stripeConnected
                ? () => navigation.navigate(Routes.RentPayment)
                : null
            }
            testID="pay-rent-card"
          />
        );
      })()}
      <StatSection
        name="Payment History"
        description="View past payments"
        iconName="chevron-right"
        iconColor={color.dark_grey}
        boxedIconName="history"
        iconBackgroundColor={color.dark_grey}
        onPress={() => navigation.navigate(Routes.PaymentHistory)}
        testID="payment-history-card"
      />

      {/******************************* MAKE A PAYMENT (guest only) *******************************/}
      <AuthConsumer>
        {({ token }) =>
          !isAdmin(token, house!.id) ? (
...
