...
            component={HouseSummary}
            options={{ tabBarButtonTestID: 'house-tab' }}
          />
          <MainTab.Screen
            name={Routes.Guest}
            component={GuestHome}
            options={{ tabBarButtonTestID: 'guest-tab' }}
          />
          <MainTab.Screen
            name={Routes.Activities}
            component={ActivityScreen}
            options={{ tabBarButtonTestID: 'activities-tab' }}
          />
...
            component={HouseChat}
            options={{ tabBarButtonTestID: 'chat-tab' }}
          />
          <MainTab.Screen
            name={Routes.Personal}
            component={Personal}
            options={{ tabBarButtonTestID: 'profile-tab' }}
          />
        </MainTab.Navigator>
      </ErrorBoundary>
    );
  },
);
...
