...
  };

  const renderLogoutButton = () => {
    return (
      <View style={{ flex: 1, justifyContent: "center" }}>
        <RatsButton
          testID="logout-button"
          onPress={signOut}
          title="LOG OUT"
          containerStyle={{
            backgroundColor: color.red,
            borderColor: color.red,
            width: "90%",
...
  if (loggingIn || loggingOut || loggingOutSuccessful || !user || !house) {
    return <RatsLoadingIndicator />;
  }

  return (
    <RatsScrollView
      testID="profile-screen"
      contentContainerStyle={{
        flexGrow: 1,
        backgroundColor: color.light_grey,
      }}
      behavior="height"
    >
...
